@@ -548,7 +548,7 @@ snd_codec_t mp3_codec =
 {
 	CODECTYPE_MP3,
 	true,	/* always available. */
-	".mp3",
+	"mp3",
 	S_MP3_CodecInitialize,
 	S_MP3_CodecShutdown,
 	S_MP3_CodecOpenStream,
